fixing code line wrap

--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,11 @@ canvas {
   z-index: -10;
 }
 
+.hljs {
+  white-space: pre;
+  overflow-x: auto;
+}
+
 @media only screen and (max-width: 600px) {
   .graph-container {
     width: 100vw;
